--- a/core/pom.xml
+++ b/core/pom.xml
@@ -441,6 +441,11 @@
             <artifactId>okhttp</artifactId>
             <version>3.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.lambdaworks</groupId>
+            <artifactId>scrypt</artifactId>
+            <version>1.4.0</version>
+        </dependency>
     </dependencies>
 
 </project>
