--- a/wallettemplate/pom.xml
+++ b/wallettemplate/pom.xml
@@ -21,13 +21,13 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.bitcoinj</groupId>
-        <artifactId>bitcoinj-parent</artifactId>
+        <artifactId>litecoinj-parent</artifactId>
         <version>0.15-SNAPSHOT</version>
     </parent>
 
     <artifactId>wallettemplate</artifactId>
 
-    <name>bitcoinj Wallet-Template</name>
+    <name>litecoinj Wallet-Template</name>
 
     <build>
         <plugins>
@@ -73,7 +73,7 @@
     <dependencies>
         <dependency>
             <groupId>org.bitcoinj</groupId>
-            <artifactId>bitcoinj-core</artifactId>
+            <artifactId>litecoinj-core</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
